fix #11; namespace forms and add z-index

--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -27,6 +27,8 @@
     background: @background;
     border-top: @accentHeight solid @accent;
 
+    z-index: 999999;
+
     a {
         color: @accent;
     }
